overflow fixed

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: "Noto Sans", sans-serif;
+    overflow: hidden;
 }
 
 html {
